--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.2.3",
+    "@expo-google-fonts/dm-serif-display": "^0.2.3",
+    "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/auth": "^17.3.1",
+    "@react-native-firebase/firestore": "^17.3.1",
+    "@react-native-firebase/storage": "^17.3.1",
     "expo": "~48.0.4",
+    "expo-app-loading": "^2.1.1",
+    "expo-linear-gradient": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-web": "~0.18.11",
+    "styled-components": "^5.3.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.71.3",
+    "@types/styled-components-react-native": "^5.2.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
