--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-web": "~0.18.11",
     "styled-components": "^5.3.8",
     "uuid": "^9.0.0"
