--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.3",
     "@expo-google-fonts/dm-serif-display": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.1",
     "@react-native-firebase/firestore": "^17.3.1",
